--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartbrain",
+  "name": "smartast",
   "version": "0.1.0",
   "private": true,
   "author": "Daksh Goyal",
@@ -16,7 +16,7 @@
     "tachyons": "^4.12.0",
     "web-vitals": "^1.0.1"
   },
-  "homepage": "https://daksh-goyal.github.io/smartbrain",
+  "homepage": "https://daksh-goyal.github.io/smartast",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
